# dgraph_client-rs

./: .travis.yml  Cargo.toml  README.md  appveyor.yml
.github/: dependabot.yml
examples/dgraph_tuto01/: data.rs  main.rs
src/: api.rs  api_grpc.rs  lib.rs
